--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,9 @@
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
-            <a href="{{ site.baseurl }}/tab">Tab</a>
+            <a href="{{ site.baseurl }}/games">Games</a>
+            <a href="{{ site.baseurl }}/AI">AI</a>
+            <a href="{{ site.baseurl }}/uni">uni</a>
           </nav>
         </header>
       </div>
