--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
             <a href="{{ site.baseurl }}/about">About</a>
             <a href="{{ site.baseurl }}/games">Games</a>
             <a href="{{ site.baseurl }}/AI">AI</a>
-            <a href="{{ site.baseurl }}/uni">uni</a>
+            <a href="{{ site.baseurl }}/uni">Uni</a>
           </nav>
         </header>
       </div>
